--- a/13_aph-catalogue.Rmd
+++ b/13_aph-catalogue.Rmd
@@ -13,10 +13,10 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Depression**      |                         |                     |
 | Bockting            | Imagine Your Mood       | AMC                 |
 |                     | Stay Fine               |                     |
-| Riper and Smit      | ICT4Depression          | VU / GGz InGeest    |
-|                     | E-COMPARED              | VU / GGz InGeest    |
-| Penninx and Lamers  | NESDA                   | VUmc / GGz InGeest  |
-|                     | RADAR-CNS               | VUmc / GGz InGeest  |
+| Riper and Smit      | ICT4Depression          | VU / GGZ inGeest    |
+|                     | E-COMPARED              | VU / GGZ inGeest    |
+| Penninx and Lamers  | NESDA                   | VUmc / GGZ inGeest  |
+|                     | RADAR-CNS               | VUmc / GGZ inGeest  |
 | **Psychosomatic symptoms** |                  |                     |
 | Knoop               | Chronic Fatigue study   | AMC                 |
 | Snoek               | MERITS (type 1 diabetes)| VUmc                |
@@ -28,7 +28,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Suicidal ideation**  |                      |                     |
 | Van Ballegooijen    | CASPAR                  | VU                  |
 | **Sleep**           |                         |                     |
-| Van Someren         |                         | AMC / GGz InGeest   |
+| Van Someren         |                         | AMC / GGZ inGeest   |
 | **Symptom Networks**|                         |                     |
 | De Geus         | VU-AMS                      | VU                  |
 
@@ -36,10 +36,12 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 ## Depression
 
 ### Bockting
-\index{StayFine study}
-\index{Imagine your Mood study}
+\index{StayFine}
+\index{Imagine your Mood}
+\index{RoQua}
+\index{Psymate}
 
-*Prof. dr. Claudi Bockting* is affiliated with the AMC psychiatry department and the Rijksuniversiteit Groningen. Her group focuses on treatment and relapse prevention of (severe) depressive disorder and related common mental health disorders. In two studies of the group, EMA measures are included. 
+*Prof. dr. Claudi Bockting* is affiliated with the AMC psychiatry department and the Rijksuniversiteit Groningen. Her group focuses on etiology, treatment and relapse prevention of (severe) depressive disorder and related common mental health disorders. In two studies of the group, EMA measures are included. 
 
 | **Aspect**           | **Description**                                              | 
 |:---------------------|:-------------------------------------------------------------|
@@ -59,35 +61,38 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 \index{ICT4Depression}
 \index{E-COMPARED}
 
-*Prof. dr. Heleen Riper* is affiliated with the department of clinical, neuro- and developmental psychology of the Vrije Universiteit and specialized mental health organisation GGz InGeest, Amsterdam. *Prof. dr. Jan Smit* is affiliated with the department of psychiatry of the Vrije Universiteit  Medical Center (VUmc) and GGz InGeest, Amsterdam. Riper and Smit have been driving forces behind the development of MoodBuster, a research platform for the delivery of online and blended psychotherapy, which has built-in, integrated EMA functionality.
+*Prof. dr. Heleen Riper* is affiliated with the department of clinical, neuro- and developmental psychology of the Vrije Universiteit and specialised mental health organisation GGZ inGeest, Amsterdam. *Prof. dr. Jan Smit* is affiliated with the department of psychiatry of the Vrije Universiteit  Medical Center (VUmc) and GGZ inGeest, Amsterdam. Riper and Smit have been driving forces behind the development of *Moodbuster* (http://www.ict4depression.eu/moodbuster/), a research platform for the delivery of online and blended psychotherapy, which has built-in, integrated EMA functionality.
 
 | **Aspect**        | **Description**                                              | 
 |:------------------|:-------------------------------------------------------------|
-| **Project team**  | Heleen Riper, PhD, Jan Smit, PhD, and the MoodBuster consortium |
+| **Project team**  | Heleen Riper, PhD, Jan Smit, PhD, and the Moodbuster consortium |
 | **Organisation**  | Vrije Universiteit Amsterdam; GGZ inGeest (and other organisations)|
-| **Project(s)**    | Moodbuster was developed in the European FP7 project “ICT4Depression” (@warmerdam2012; http://www.ict4depression.eu/), and applied in the Horizon 2020 FP7 EU-project “European COMPARative Effectiveness research on blended Depression treatment versus treatment-as-usual” (E-COMPARED; @Kleiboer2016; @kemmeren2016; http://www.e-compared.eu/), MoodBuster will also be used in the EU ImpleMentAll project (http://www.implementall.eu) and in several other clinical trials that are currently (October 2018) in preparation. |
-| **EMA measures**  | In the ICT4Depression project, the MoodBuster platform included a complex set of active and passive EMA measures, including physiological sensors, accelerometers, wearables to measure sympathetic nervous system responses (chest strap and glove), and an Android EMA smartphone app. |
+| **Project(s)**    | Moodbuster was developed in the European FP7 project “ICT4Depression” (@warmerdam2012; http://www.ict4depression.eu/), and applied in the Horizon 2020 FP7 EU-project “European COMPARative Effectiveness research on blended Depression treatment versus treatment-as-usual” (E-COMPARED; @Kleiboer2016; @kemmeren2016; http://www.e-compared.eu/), Moodbuster will also be used in the EU ImpleMentAll project (http://www.implementall.eu) and in several other clinical trials that are currently (October 2018) in preparation. |
+| **EMA measures**  | In the ICT4Depression project, the Moodbuster platform included a complex set of active and passive EMA measures, including physiological sensors, accelerometers, wearables to measure sympathetic nervous system responses (chest strap and glove), and an Android EMA smartphone app. |
 |                   | For the E-COMPARED study, the Moodbuster website and smartphone app were adapted to deliver (blended) treatment to patients with MDD, in 5 routine practice settings across Europe. A therapist portal was added, in order to allow therapists to monitor patients’ progress and send feedback messages. Smartphone- based EMA was used to asses sleep, mood, worrying, self-esteem, activities (2 items) and social contacts. Prompts were sent at a random time point between 10:00 and 22:00. At the beginning and during the final phase of treatment, patients received two additional prompts per day for one week. In the morning (around 10:00), sleep, worrying and self-esteem items were assessed. In the evening (around 22:00), these questions were repeated, along with the activity and social interaction items. Patients rated these EMA items on a visual analogue scale, ranging from 0 (low) to 10 (high).|
-| **Platform used** | Moodbuster (http://www.moodbuster.eu) |
+| **Platform used** | Moodbuster (http://www.moodbuster.eu; see Chapter \@ref(ema-instruments-catalogue))) |
 | **Contact**       | http://research.vu.nl/en/persons/heleen-riper | 
 |                   | http://research.vumc.nl/en/persons/jan-smit |
 |                   | http://research.vumc.nl/en/persons/lise-kemmeren |
 
 ### Penninx and Lamers
 \index{NESDA}
+\index{RADAR-CNS}
 
-Prof.dr. Brenda Penninx and Dr. Ir Femke Lamers are affiliated with the Department of Psychiatry, VU University Medical Center and GGz InGeest. Both are involved in two EMA studies: an EMA study in the context of the Netherlands study of Depression and Anxiety (NESDA; www.nesda.nl), of which Penninx is primary investigator, and a large international EU H2020-funded collaborative research project, in which a variety of active and passive measures are used (the 'Remote Assessment of Disease and Relapse - Central Nervous System'-project; RADAR-CNS; http://www.radar-cns.org).
+**Prof.dr. Brenda Penninx** and **Dr.Femke Lamers** are affiliated with the Department of Psychiatry, VU University Medical Center and GGZ inGeest. Both are involved in two EMA studies: an EMA study in the context of the Netherlands study of Depression and Anxiety (*NESDA*; www.nesda.nl), of which Penninx is primary investigator, and a large international EU H2020-funded collaborative research project, in which a variety of active and passive measures are used (the 'Remote Assessment of Disease and Relapse - Central Nervous System'-project; *RADAR-CNS*; http://www.radar-cns.org).
 
 #### NESDA EMA study
+\index{NESDA}
+\index{RoQua}
 
 | **Aspect**     | **Description**                                              | 
 |:---------------|:-------------------------------------------------------------|
 | **Project team** | Femke Lamers, PhD, Brenda Penninx, PhD (VUmc), Hariette Riese, PhD (UMCG), with the NESDA consortium|
 | **Organisation** | VUmc, GGZ inGeest, Amsterdam|
 | **Project(s)**   | The main aim of NESDA (the Netherlands study of Depression and Anxiety) is to examine the long-term (eight-year) course and prognosis and co-morbidity of anxiety and depression, to improve quality of care and prevent chronicity [@Penninx2008]. Within the Wave 6 9-year follow-up of the NESDA study (2015 - 2017), a selected sample of NESDA participants with symptoms of depression and healthy controls (n = 384) was invited for an EMA diary /actigraphy study. |
-| **EMA measures** | NESDA EMA study data was collected to explore the dynamic interplay between cognitions, emotions, behavior and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, and chronotype and diurnal patterns of activity in depressed versus non-depressed participants. EMA participants started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone (Android / IPhone) if they had sufficient data or access to WiFi for at least 80% of the two-week time period, and could borrow a phone if needed. To record the amount of physical activity during EMA monitoring, participants were also asked to wear an accelerometer (GENEActiv, 30Hz) on their non-dominant wrist, 24 hours a day, for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment.|
-|               | Participants were prompted five times a day, for two weeks, to complete a self-report questionnaire comprising approx. 31 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) valance (unpleasant to pleasant) and arousal (calm to excited), 2) current state, symptoms of depression/anxiety, physical condition, 3) social context, 4) sleep, 5) daily uplifts/hassles, 6) activities, and 7) substance use. Examples of items were: "I feel down", "I feel cheerful" and "Where are you now" (e.g. at the neighbor's house). In addition, there was an addendum questionnaire with one item inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might influence answers. The items on valance, arousal and current state have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are inspired on earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015) |
-| **Platform used** | RoQua (http://www.roqua.nl/), GENEActiv accelerometer |
+| **EMA measures** | NESDA EMA study data was collected to explore the dynamic interplay between cognitions, emotions, behaviour and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, and chronotype and diurnal patterns of activity in depressed versus non-depressed participants. EMA participants started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone (Android / IPhone) if they had sufficient data or access to WiFi for at least 80% of the two-week time period, and could borrow a phone if needed. To record the amount of physical activity during EMA monitoring, participants were also asked to wear an accelerometer (GENEActiv, 30Hz) on their non-dominant wrist, 24 hours a day, for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment.|
+|               | Participants were prompted five times a day, for two weeks, to complete a self-report questionnaire comprising approx. 31 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) valance (unpleasant to pleasant) and arousal (calm to excited), 2) current state, symptoms of depression/anxiety, physical condition, 3) social context, 4) sleep, 5) daily uplifts/hassles, 6) activities, and 7) substance use. Examples of items were: "I feel down", "I feel cheerful" and "Where are you now" (e.g. at the neighbor's house). In addition, there was an addendum questionnaire with one item inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might influence answers. The items on valance, arousal and current state have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are based on items from earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015) |
+| **Platform used** | RoQua (http://www.roqua.nl/), GENEActiv accelerometer. See Chapter \@ref(ema-instruments-catalogue)) |
 | **Contact Information** | http://research.vumc.nl/en/persons/brenda-penninx |
 |                         | http://research.vumc.nl/en/persons/femke-lamers   |
 |                         | http://www.nesda.nl/ |
@@ -101,7 +106,7 @@ Prof.dr. Brenda Penninx and Dr. Ir Femke Lamers are affiliated with the Departme
 | **Project team** | Femke Lamers, PhD; Brenda Penninx, PhD; Sonia Difrancesco, MSc, and the RADAR consortium.  |
 | **Organisation** | VUmc, GGZ inGeest |
 | **Project** | The European (EU H2020-IMI) RADAR-CNS project (Remote Assessment of Disease and Relapse - Central Nervous System; http://www.radar-cns.org/) aims to study the potential of wearable devices and smartphone technology to help prevent and treat depression, multiple sclerosis and epilepsy. The project, which started in 2016, was designed to examine how remote measurement technologies can monitor and improve quality of life and psychological well-being of patients. Within this project, the VUmc/GGZ inGeest research site focuses on depression (RADAR-MDD), in collaboration with King's College, London (KCL). |
-| |  Technical goals of the project are to 1) build an end-to-end open source system with generalized data aggregation capabilities, and 2) explore (technological aspects of) big data solutions. Clinical goals of the project are to 1) assess the feasibility of continuous monitoring of patients, and 2) predict disease onset or relapse with big data prevention and risk assessment approaches. |
+| |  Technical goals of the project are to 1) build an end-to-end open source system with generalised data aggregation capabilities, and 2) explore (technological aspects of) big data solutions. Clinical goals of the project are to 1) assess the feasibility of continuous monitoring of patients, and 2) predict disease onset or relapse with big data prevention and risk assessment approaches. |
 | **EMA Measures** | Data are collected during a 2-year period, in which EMA will be activated every 6 weeks for 6 consecutive days. Active EMA outcomes include (variability in) sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of the clinical course of participants. Passive EMA measures include location and movement (GPS; actigraphy), skin temperature, galvanic skin conductance, heart rate (-variability), voice recognition, social interaction data (call/message logs), and smartphone app usage patterns.|
 | **Platform(s)**  | In the RADAR project, an comprehensive EMA platform is developed (the RADAR RMT application; see http://thehyve.nl/cases/radar-cns and http://github.com/RADAR-base); This platform focuses on classes of data rather than specific devices, to enhance modularity and adaptability, as new devices become available. The platform will be used to integrate and control data streams from an EMA smartphone app and several wearable device (including the [Empatica E4 Wristband](http://www.empatica.com/research/e4/), Pebble 2 Smart-watch, Biovotion VSM, Faros 180, and [Fitbit](http://www.fitbit.com/home). |
 | **Contact**      | http://research.vumc.nl/en/persons/femke-lamers |
@@ -113,8 +118,9 @@ Prof.dr. Brenda Penninx and Dr. Ir Femke Lamers are affiliated with the Departme
 
 ### Knoop
 \index{Chronic Fatigue}
+\index{RoQua}
 
-Prof. dr Hans Knoop is professor of evidence-based psychological and behavioral interventions for medical conditions and somatic symptoms at department of Medical Psychology of the Amsterdam Medical Center (AMC). In 2015/2016, Knoop and colleagues ran an EMA study at the Expert Centre for Chronic Fatigue (ECCF; http://nkcv.nl/).
+**Prof. dr. Hans Knoop** is professor of evidence-based psychological and behavioural interventions for medical conditions and somatic symptoms at the department of Medical Psychology of the Amsterdam Medical Center (AMC). In 2015/2016, Knoop and colleagues ran an EMA study at the Expert Centre for Chronic Fatigue (ECCF; http://nkcv.nl/).
 
 | **Aspect**     | **Description**                                                  | 
 |:---------------|:-------------------------------------------------------------|
@@ -122,16 +128,20 @@ Prof. dr Hans Knoop is professor of evidence-based psychological and behavioral 
 | **Organisation** | AMC |
 | **Project** | The CFS EMA study was designed to investigate - through time-series analyses - whether there are differences in perpetuators of fatigue between individual patients. |
 | **EMA measures | New patients attending the ECCF (n = 102) were asked to complete an e-diary, 5 times a day, for 2 weeks. The times were fixed in consultation with the participant, with a 3-hour break between each assessment. The e-diary assessed  fatigue, pain, anxiety, depression, activity (physical, mental, social), patients' focus on fatigue, fatigue catastrophising, self-efficacy, fear avoidance, and social incomprehension. Participants also wore an accelerometer (actigraphy) during the period when the self-reports were collected. The R 'auto-var' package was used to conduct network analyses. Results are forthcoming. Identified determinants of fatigue will used to personalize treatment of CFS-patients. |
-| **Platform used** | RoQua (http://www.roqua.nl). Participants received a link to the (web-based) e-diary via an SMS to their personal smartphone. |  
-| Contact Information | http://www.amc.nl/web/research-75/publications/prof.-dr.-j.a.-knoop.htm |
+| **Platform used** | RoQua (http://www.roqua.nl; see Chapter \@ref(ema-instruments-catalogue))). Participants received a link to the (web-based) e-diary via an SMS to their personal smartphone. |  
+| **Contact** | http://www.amc.nl/web/research-75/publications/prof.-dr.-j.a.-knoop.htm |
 |                     | http://nkcv.nl/onderzoek/expert-centre-chronic-fatigue/ |
 
 
 ### Sprangers
+\index{FAntasTIQUE}
+\index{IMPACT}
 
+**Prof. dr. Mirjam Sprangers** is professor at the Department of Medical Psychology, Academic Medical Center (AMC), University of Amsterdam. She coordinates a research line on Quality of Life (QoL) with focuses on patient-reported outcomes in somatic settings. Currently, she and her research group are involved in two projects that involve EMA: The *FAntasTIGUE study*, wich focuses on fatigue in patients with chronic obstructive pulmonary disease and the NWO-funded *IMPACT project* (http://www.impactonderzoek.nl/) which targets patients undergoing a cardiac intervention. 
 
 #### FAntasTIGUE
 \index{FAntasTIGUE}
+\index{Psymate}
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
@@ -144,6 +154,7 @@ Prof. dr Hans Knoop is professor of evidence-based psychological and behavioral 
 
 #### IMPACT
 \index{IMPACT}
+\index{Psymate}
 
 | **Aspect**        | **Description**                                              | 
 |:------------------|:-------------------------------------------------------------|
@@ -151,14 +162,15 @@ Prof. dr Hans Knoop is professor of evidence-based psychological and behavioral 
 | **Organisation**  | AMC |
 | **Project**       | The IMPACT project (http://www.impactonderzoek.nl/) is an NWO-funded study targeting the Quality of Life (QoL) of patients with multiple chronic morbidities, specifically those undergoing a cardiac intervention. The project aims to improve the conceptualization of QoL and enhance the sensitivity and comprehensiveness of its measurement by taking the trait-state distinction, contextual factors, and response shift into account). Participants are cardiac patients with comorbidities who were scheduled for elective percutaneous coronary intervention (PCI) or elective coronary artery bypass graft (CABG) (N = 320). In a sub-sample of participants, QoL is monitored through EMA (n = 37), to monitor QoL states. The study has a longitudinal design, with three EMA data collection periods: 1) pre-treatment, 2) two weeks after treatment for PCI patients or 3 months post-treatment for CABG patients, and 3) six months post-treatment. |
 | **EMA measures**  | Participants are prompted to answer nine general and one evening questionnaire per day, for seven consecutive days. During the day, patients are beeped randomly between 7:30 and 22:30 to complete a 19-item questionnaire. Concepts measured include: positive mood (feeling energetic, relaxed feeling, cheerfulness, happy), negative mood (anxiety, sadness, irritation, worry), coronary artery disease symptoms (chest pain, tightness in chest, oppressive feeling on the chest), and general symptoms (tiredness, other types of pain, shortness of breath), and contextual items. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. Patients are also asked to complete an evening questionnaire just before they go to bed. The evening questionnaire has, besides the general questionnaire, an additional set of questions from the EQ-5D, and a question on the overall health state of the day. This item is rated on a visual analogue scale from 0 (worst) to 100 (best). Data will be analysed with vector auto-regressive models, using R. |
-| **Platform used** | Psymate (http://psymate.eu); Participants are provided with iPods with a pre-installed EMA application, or , if they prefer, can use their own device. |
+| **Platform used** | Psymate (http://psymate.eu; see Chapter \@ref(ema-instruments-catalogue))); Participants are provided with iPods with a pre-installed EMA application, or, if they prefer, can use their own device. |
 | **Contact**       | http://www.amc.nl/web/research-75/publications/prof.-dr.-m.a.g.-sprangers-publications.htm |
 
 
 ### Snoek
 \index{MERITS study}
+\index{Ilumivu}
 
-Frank Snoek is Professor of Medical Psychology, specialized in psycho-social diabetology. He heads the Diabetes Psychology Research Group (http://www.vumc.com/branch/diabetes-psychology/) and is consulting clinical psychologist for the VUmc Diabetes Center http://www.vumc.nl/afdelingen/diabetescentrum/). Snoek an co-workers use EMA to study the relationship between blood glucose variability and wellbeing.
+**Prof. dr. Frank Snoek** is Professor of Medical Psychology, specialised in psycho-social diabetology. He heads the Diabetes Psychology Research Group (http://www.vumc.com/branch/diabetes-psychology/) and is consulting clinical psychologist for the VUmc Diabetes Center http://www.vumc.nl/afdelingen/diabetescentrum/). Snoek an co-workers use EMA to study the relationship between blood glucose variability and wellbeing.
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
@@ -175,14 +187,15 @@ Frank Snoek is Professor of Medical Psychology, specialized in psycho-social dia
 
 ### Van Ballegooijen
 \index{CASPAR}
+\index{Ilumivu}
 
-Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGeest, specialised in the use of information and communication technology in mental health care and suicide prevention. In the 'Continuous Assessment for Suicide Prevention And Research' study (CASPAR; @Nuij2018) Van Ballegooijen and colleagues use EMA to study pathways to suicidal behavior.
+**Dr. Wouter Van Ballegooijen** is a post-doctoral researcher at the VU and GGZ inGeest, specialised in the use of information and communication technology in mental health care and suicide prevention. In the 'Continuous Assessment for Suicide Prevention And Research' study (*CASPAR*; @Nuij2018) Van Ballegooijen and colleagues use EMA to study pathways to suicidal behaviour.
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
 | **Project team** | Wouter van Ballegooijen, PhD; Chani Nuij, MSc.; Ad Kerkhof, PhD; Jan Smit, PhD; Heleen Riper, PhD |
 | **Organisation** | Vrije Universiteit Amsterdam, VUmc, GGZ inGeest |
-| **Project**      |  The 'Continuous Assessment for Suicide Prevention And Research' (CASPAR) study ([@Nuij2018) aims to evaluate the feasibility of mobile safety planning and daily mobile self-monitoring in routine care treatment for  for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalized in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to: (a) empirically validate hypothesized psychological processes and stages of suicide pathways, (b) identify individual pathways to suicidal behavior, and (c) profile (sub)types of suicidality. The project is expected to result in 1) an interactive smartphone-based safety plan that patients can access 24/7, 2) increased disease awareness of patients due to self-monitoring, and 3) input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalized interventions according to precision medicine principles, and more effective suicide prevention. |
+| **Project**      |  The 'Continuous Assessment for Suicide Prevention And Research' (CASPAR) study ([@Nuij2018) aims to evaluate the feasibility of mobile safety planning and daily mobile self-monitoring in routine care treatment for  for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalised in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to: (a) empirically validate hypothesised psychological processes and stages of suicide pathways, (b) identify individual pathways to suicidal behaviour, and (c) profile (sub)types of suicidality. The project is expected to result in 1) an interactive smartphone-based safety plan that patients can access 24/7, 2) increased disease awareness of patients due to self-monitoring, and 3) input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalised interventions according to precision medicine principles, and more effective suicide prevention. |
 | **EMA measures** | In the project, adult suicidal patients (N = 80) with major depression or dysthymia and suicide risk in mental health care will be prompted, three times a day, to answer eight self-report items (e.g. 'I feel sad') assessing mood, rumination, hopelessness, defeat, entrapment, burdensomeness, belongingness, impulsiveness, suicidal imagery and suicidal ideation. Items, which are based on existing questionnaires, such as the Patient Health Questionnaire (PHQ-9), are rated on a 7-point Likert-scale, ranging from 'Not at all' to 'Very much'. Results are presented to patients in graphs, which patients encouraged to discuss with their clinicians. In addition to active EMA data, location data are also gathered to assess movement patterns and daily rhythms. Planned variables also include accelerometer data and smartphone usage patterns. These data are not visible to study participants. |
 | **Platform used**| Ilumivu (http://ilumivu.com, see Chapter \@ref(ema-instruments-catalogue)) |
 | **Contact**      | http://research.vu.nl/en/persons/wouter-van-ballegooijen |
@@ -192,11 +205,13 @@ Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGe
 ## Psychotic symptoms
 
 ### Van der Gaag
+\index{TEMSTEM}
+\index{VRETp}
 
 *Prof. dr. Mark van der Gaag* is professor of Clinical Psychology at the VU University in Amsterdam, and  head of psychosis research at Parnassia, the Hague. He is specialised in the research and treatment of psychosis. In two recent RCTs, described below, Van der Gaag and colleagues used EMA outcomes to collect in-the-moment data.
 
 #### TemStem
-\index{TEMSTEM}
+\index{TemStem}
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
@@ -211,6 +226,8 @@ Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGe
 
 
 ### Van der Gaag: VRETp
+\index{VRETp}
+\index{PsyMate}
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
@@ -220,6 +237,7 @@ Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGe
 | **EMA measures** | EMA included momentary assessment of 1) Anxiety (one item, e.g. "I feel anxious"), 2) Perceived social threat (four items, e.g. "In this company, I feel accepted"), 3) Paranoia (three items, e.g. "I feel suspicious"), and 4) Time spent with others (max. three multiple choice items inquiring about type of company (nobody, family, non-family, etc.). These items were based on previous EMA work (e.g., @collip2011social). Participants were prompted 10 times a day, during 6 days. Anxiety, threat and paranoia items were rated on a 7-point Likert scale, ranging from 1 ("not at all") to 7 ("very"). Reports had to be completed within 15 min of the beep. To be included in the analysis, participants had to complete diary entries for at least one-third of the beeps (i.e., a minimum of 20 measurements). All 116 participants completed EMA measurements at baseline (mean number of completed self-assessments 46.1, SD 13.3), 96 participants completed the post-treatment assessment sufficiently (43.1, SD 10.1), and 87 participants completed the follow-up (43.2, SD 11.1). The trial results suggest that the addition of VR-CBT to standard treatment can reduce paranoid ideation and momentary anxiety in patients with a psychotic disorder [@pot2018].|
 | **Platform used** | PsyMate (http://www.psymate.eu/, see Chapter \@ref(ema-instruments-catalogue)). Because the PsyMate application was not finished at the time of the trial, participants were provided with a small palmtop device for the duration of the study.|
 | **Contact**       | http://research.vu.nl/en/persons/m-van-der-gaag |
+|                   | https://www.researchgate.net/profile/Roos_Pot-Kolder |
 
 
 ## Sleep
@@ -227,7 +245,7 @@ Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGe
 ### Van Someren
 \index{Sleep}
 
-*Prof. dr. Eus van Someren* is affiliated with the department of sleep and cognition of the Netherlands Institute for Neuroscience (http://herseninstituut.nl/), the Department of Psychiatry of VUmc and GGz InGeest, Amsterdam. His group focusses on the study of healthy and disturbed sleep, using neuro-imaging, actigraphy and EMA. 
+*Prof. dr. Eus van Someren* is affiliated with the department of sleep and cognition of the Netherlands Institute for Neuroscience (http://herseninstituut.nl/), the Department of Psychiatry of VUmc and GGZ inGeest, Amsterdam. His group focusses on the study of healthy and disturbed sleep, using neuro-imaging, actigraphy and EMA. 
 
 | **Aspect**     | **Description**                                          | 
 |:---------------|:-------------------------------------------------------------|
@@ -245,6 +263,7 @@ Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGe
 
 ### De Geus
 \index{VU-AMS}
+\index{DAMS}
 
 *Prof. dr. Eco de Geus* is head of the department of Biological Psychology and co-director of the Netherlands Twin Registry at the VU University. De Geus has been the driving force behind the development of the VU University Ambulatory Monitoring System (VU-AMS; http://www.vu-ams.nl/vu-ams/), a non-invasive wearable device that is used for continuous ambulatory measurement of the autonomic nervous system.
 
@@ -257,7 +276,7 @@ Dr. Wouter Van Ballegooijen is a post-doctoral researcher at the VU and GGZ inGe
 |         | 2)	Ambulatory study on self-regulation among youth (Tjew A Sin et al., 2018-2019). This study is conducted at the schools as part of the NeuroLab project. A total of 50 students, will wear the VU-AMS device for approximately 22 hours. Autonomic nervous system activity is collected continuously over the course of a regular school day (including the night and morning thereafter) and will be related to multiple components of self-regulation, including emotion-regulation, cognitive functioning, impulsivity and inhibition  |
 | **EMA measures** | The VU-AMS device is a battery powered wearable that can record 24 to 48 hours of data (4GB storage). It measures the electrocardiogram, the impedance cardiogram, and skin conductance. With VU-AMS, the following outcomes can be collected: Heart Rate / Inter beat Interval (IBI), Heart Rate Variability (SDNN, RMSSD, IBI power spectrum: HF, LF), Respiratory Sinus Arrhythmia (RSA), Pre-Ejection Period (PEP), T-wave amplitude (TWA), Left Ventricular Ejection Time (LVET), Stroke Volume (SV) and Cardiac Output (CO), Respiration Rate (RR), Skin Conductance Level (SCL) and Skin Conductance Responses (SCRs), Movement (Hip-worn tri-axial accelerometer signals (g). |
 |                 | The freely available Data Analysis and Management System (DAMS) package is used for  extraction and processing of VU-AMS data (http://www.vu-ams.nl/support/downloads/software/). The DAMS tool offers options for data inspection (visual inspection of raw data), automated detection of R-peaks in raw ECG signal and visual inspection of final IBI time series, event/diary-based data labeling, IBI spectral power calculation, automated scoring of RR, RSA, and PEP form the combined ECG 
-| **Platform(s) used** | VU-AMS / DAMS (see also Chapter \@ref(ema-instruments-catalogue)|  
+| **Platform(s) used** | VU-AMS / DAMS (see Chapter \@ref(ema-instruments-catalogue)|  
 | **Contact** | http://research.vu.nl/en/persons/jcn-de-geus |
 |             | http://research.vu.nl/en/persons/ahm-willemsen | 
 |             | http://research.vu.nl/en/persons/martin-gevonden |
